<resources>

    <string name="app_name">LunchList</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Lunch List</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="type">Type:</string>
    <string name="takeout">Take-Out</string>
    <string name="sit_down">Sit-Down</string>
    <string name="delivery">Delivery</string>
    <string name="notes">Notes:</string>
    <string name="save">Save</string>
    <string name="empty">Click the MENU button to Add a Restaurant!</string>
    <string name="prefTitle">Sort Order</string>
    <string name="prefSummary">Choose the order the list uses</string>
    <string name="prefDialTitle">Choose a sort order</string>
    <string name="locationTitle">Location:</string>
    <string name="notSet">(not set)</string>
    <string name="soundAlarmTitle">Sound a Lunch Alarm</string>
    <string name="summaryAlarm">Check if you want to know when it is time for lunch</string>
    <string name="lunchAlarmTitle">Lunch Alarm Time</string>
    <string name="lunchAlarmSummary">Set your desired time for the lunch alarm</string>
    <string name="alarmText">Its Time for Lunch!</string>
    <string name="notificationTitle">Use a Notification</string>
    <string name="notificationSummary">Check if you want status bar icon at lunchtime, or uncheck for full screen notification</string>
    <string name="alarmNote">Its time for lunch ARE YOU A HUNGRY, HUNGRY, HIPPO?</string>
    <string name="phoneTitle">Phone:</string>

</resources>